# AetherLock-Backend

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Locker.h  RequestRouter.h  Server.h
src/ipc/: Protocol.h
src/security/: Monitor.h  Whitelist.h
src/util/: Logger.h
